--- a/demo_vue3.0/mytest/package.json
+++ b/demo_vue3.0/mytest/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
